# discord_bot_redis

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  example.env
src/: main.rs
