[package]
name = "redis_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
serenity = "0.12"
dotenvy = "0.15.7"
redis = { version = "0.25.3", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "json",
    "aio",
] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
